part-3/302/manifests/stateful_set.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: my-project
spec:
  ports:
    - port: 6060
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: my-project
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5555
      protocol: TCP
  selector:
    app: pingpong
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: my-project
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3333
      protocol: TCP
  selector:
    app: pingpong
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: my-project
  name: pingpong-ing
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: my-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: config
          configMap:
            name: app-configs
            items:
              - key: .env
                path: ".env"
        - name: data-pv
          persistentVolumeClaim:
            claimName: data-claim
      containers:
        - name: log-output
          imagePullPolicy: Always
          image: dievskiy/log-output:v17
          volumeMounts:
            - mountPath: "/config"
              name: config
              readOnly: true
            - mountPath: /usr/src/app/files
              name: data-pv
        - name: pingpong-image
          imagePullPolicy: Always
          image: dievskiy/pingpong:v6
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: my-project
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db-claim
      containers:
        - name: postgres-image
          imagePullPolicy: Always
          image: postgres:14
          ports:
            - name: inet
              containerPort: 6060
          volumeMounts:
            - name: db
              subPath: postgres
              mountPath: /postgresql
